# nn-rs

./: .gitignore  Cargo.toml  README.md  mnist_results.md
crates/layers/: Cargo.toml
crates/layers/src/: elu.rs  layer.rs  leaky_relu.rs  lib.rs  main.rs  relu.rs  selu.rs  softmax.rs
crates/loss/: Cargo.toml
crates/loss/src/: cross_entropyloss.rs  lib.rs  mseloss.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs  loadmodel.rs  savemodel.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: adam.rs  lib.rs  momentum.rs  nadam.rs  nag.rs  rmsprop.rs  sgd.rs
examples/mnist-nn/: Cargo.toml
examples/mnist-nn/src/: main.rs
