[package]
name = "mnist-nn"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
polars = { version = "0.47.1", features = ["lazy", "streaming", "ndarray", "dtype-categorical"] }
model = { path = "../../crates/model" }
loss = { path = "../../crates/loss" }
layers = { path = "../../crates/layers" }
optimizer = { path = "../../crates/optimizer" }